  constants in TextToViewSelector were also dropped.
* Refactored ResultEventFactorySelector to be a static inner class of BeanInvokingActionFactory to highlight the fact that it
  is a helper strategy of this class.

Package org.springframework.webflow.execution
* Fixed inconsistency in continuation id parsing within ClientContinuationFlowExecutionRepository.

Package org.springframework.webflow.support
* Moved ImmutableFlowAttributeMapper to builder and made package-private.  Not a general support class.
* Added the ability to invoke a list of actions before executing an exception handling transition.

Changes in version 1.0 RC3 (23.6.2006)
------------------------------------
Package org.springframework.webflow
* Renamed TransitionSet.transitionMatches to "hasMatchingTransition".
* A flow variable can now be annotated with arbitrary properties to influence behaviour.
* Factored out shared behavior of TransitionSet and StateExceptionHandlerSet into CollectionUtils.
* Renamed FlowExecutionControlContext to RequestControlContext to avoid confusion with the FlowExecutionContext
  and highlight the relationship with the RequestContext.
* Renamed FlowArtifactException to FlowArtifactLookupException and relocated to builder package.
* Renamed StateException to FlowExecutionException.  Revised semantics to ensure it is serializable.
* Renamed StateExceptionHandler to FlowExecutionExceptionHandler.
* Renamed StateExceptionHandlerSet to FlowExecutionHandlerSet.
* Removed FlowExecutionStatistics, merging its only useful method (isActive) into the FlowExecutionContext interface
* Removed unnecessary Event argument from Flow.onEvent and TransitionableState.onEvent.
* Removed CannotExecuteTransitionException, as its use reflected an illegal state.
* Removed NoSuchFlowStateException, as its use reflected an illegal argument.
* Made all exceptions honor serializable contract, removing dependencies on internal transient arguments such as Flow, State, and Transition 